# PlaySmart-Server-Buas-Main

./: README.md  docker-compose.yml
.github/workflows/: CI.yml  Container built push and pull.yml
backend/: .dockerignore  .gitignore  Dockerfile  migrate_feedback.py  migrate_match_id.py  pyproject.toml  run_production.bat  run_production.sh
backend/app/: database.py  main.py
backend/app/crud/: coach_config.py  feedback.py  toolkit.py  users.py
backend/app/models/: coach_config.py  database_models.py  feedback.py  toolkit.py  users.py
backend/app/router/: auth.py  biometrics.py  coach.py  feedback.py  match_data.py  reaction_time.py  riot.py  toolkit.py  valorant.py  videos.py
backend/app/services/: biometric_processor.py  inference.py
backend/app/utils/: auth.py
electron-app/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
electron-app/docs/: README.md  conf.py  project_structure.rst  requirements.txt
electron-app/docs/api/: auth.rst  biometrics.rst  match_data.rst  reaction_time.rst  toolkit.rst  valorant.rst  videos.rst
electron-app/electron/: main.cjs  preload.cjs
electron-app/src/: App.tsx  index.css
electron-app/src/components/: ChampionMatchups.tsx  FeedbackCard.tsx  FeedbackCategoryFilter.tsx  videoplayer.tsx
electron-app/src/hooks/: usePlayerData.ts
electron-app/src/types/: riot.ts  (+1 more)
inference/: Dockerfile  inference_client.py  watcher.py
pipeline/: Dockerfile  auto_cleaning_and_dq.py  auto_dq_report.py  auto_merge.py  crontab  esports_utils.py  generate_dq_report.py  requirements.txt
(+74 files in other folders)
