[tool.poetry]
name = "Packages"
version = "0.1.0"
description = "Enhancing Performance for the Breda Guardians through Data Analytics"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

# API
fastapi = "0.104.1"
uvicorn = { version = "0.24.0", extras = ["standard"] }
python-multipart = "0.0.6"
python-dotenv = "^1.2.1"

# Auth
python-jose = { version = "3.3.0", extras = ["cryptography"] }
passlib = { version = "1.7.4", extras = ["bcrypt"] }
pydantic = { version = "1.10.8", extras = ["email"] }
email-validator = "2.0.0"
bcrypt = "4.0.1"

# Database
sqlalchemy = "2.0.23"
psycopg2-binary = "^2.9.10"

# Data
pandas = "2.1.3"
numpy = "1.26.2"
httpx = "0.28.1"
paramiko = "^3.5.0"

# ML / Inference
torch = "^2.4.1"
torchvision = "^0.19.1"
opencv-python-headless = "^4.5.5"
ultralytics = "^8.3.77"
scikit-learn = "^1.3.0"

# Video / Audio (biometric processor)
moviepy = "^2.1.1"
librosa = "^0.10.2.post1"
openai-whisper = { git = "https://github.com/openai/whisper.git" }

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
ipykernel = "^6.29.5"